# swagger/swagger.yaml
@@ -1,108 +1,95 @@
-basePath: /api/v1
+basePath: /
 consumes:
 - application/json
 - application/xml
 - application/gob
 - application/x-gob
 definitions:
-  GoaExampleAccountCurrentuser:
-    description: GoaExampleAccountCurrentuser media type (default view)
+  AccountListPayload:
+    example:
+      ids:
+      - Ut rerum quis velit debitis.
+      offset: 1.858008479944432e+18
+    properties:
+      ids:
+        example:
+        - Ut rerum quis velit debitis.
+        items:
+          example: Ut rerum quis velit debitis.
+          type: string
+        type: array
+      offset:
+        example: 1.858008479944432e+18
+        format: int64
+        type: integer
+    required:
+    - ids
+    - offset
+    title: AccountListPayload
+    type: object
+  AccountPayload:
+    example:
+      email: jesus@gutmann.net
+      password: poz0nciae7
+    properties:
+      email:
+        example: jesus@gutmann.net
+        format: email
+        type: string
+      password:
+        description: password
+        example: poz0nciae7
+        maxLength: 20
+        minLength: 8
+        pattern: ^[a-zA-Z0-9!-/:-@¥{}±§|[-{-~]+$
+        type: string
+    required:
+    - email
+    - password
+    title: AccountPayload
+    type: object
+  GoaExampleAccount:
+    description: GoaExampleAccount media type (default view)
     example:
       name: Laborum voluptas a officiis.
-      userId: 1.970807810636654e+18
+      token: Tempora eum molestiae temporibus et.
+      userId: 1.0526791940196297e+18
     properties:
       name:
         description: Name of user
         example: Laborum voluptas a officiis.
         type: string
-      userId:
-        description: Unique User ID
-        example: 1.970807810636654e+18
-        format: int64
-        type: integer
-    required:
-    - userId
-    - name
-    title: 'Mediatype identifier: application/vnd.goa.example.account.currentuser+json;
-      view=default'
-    type: object
-  GoaExampleAccountLogin:
-    description: GoaExampleAccountLogin media type (default view)
-    example:
-      name: Eum molestiae temporibus et.
-      token: Voluptatem repellendus.
-      userId: 4.887016811865583e+18
-    properties:
-      name:
-        description: Name of user
-        example: Eum molestiae temporibus et.
-        type: string
       token:
         description: Unique User Token
-        example: Voluptatem repellendus.
+        example: Tempora eum molestiae temporibus et.
         type: string
       userId:
         description: Unique User ID
-        example: 4.887016811865583e+18
+        example: 1.0526791940196297e+18
         format: int64
         type: integer
     required:
     - userId
-    - token
-    - name
-    title: 'Mediatype identifier: application/vnd.goa.example.account.login+json;
-      view=default'
+    title: 'Mediatype identifier: application/vnd.goa.example.account+json; view=default'
     type: object
-  GoaExampleAccountLogout:
-    description: GoaExampleAccountLogout media type (default view)
+  GoaExampleAccountCollection:
+    description: GoaExampleAccountCollection is the media type for an array of GoaExampleAccount
+      (default view)
     example:
-      status: false
-    properties:
-      status:
-        description: action status
-        example: false
-        type: boolean
-    title: 'Mediatype identifier: application/vnd.goa.example.account.logout+json;
+    - name: Laborum voluptas a officiis.
+      token: Tempora eum molestiae temporibus et.
+      userId: 1.0526791940196297e+18
+    - name: Laborum voluptas a officiis.
+      token: Tempora eum molestiae temporibus et.
+      userId: 1.0526791940196297e+18
+    - name: Laborum voluptas a officiis.
+      token: Tempora eum molestiae temporibus et.
+      userId: 1.0526791940196297e+18
+    items:
+      $ref: '#/definitions/GoaExampleAccount'
+    title: 'Mediatype identifier: application/vnd.goa.example.account+json; type=collection;
       view=default'
-    type: object
-  GoaExampleAccountOk:
-    description: GoaExampleAccountOk media type (default view)
-    example:
-      status: false
-    properties:
-      status:
-        description: action status
-        example: false
-        type: boolean
-    title: 'Mediatype identifier: application/vnd.goa.example.account.ok+json; view=default'
-    type: object
-  GoaExampleAccountRegister:
-    description: GoaExampleAccountRegister media type (default view)
-    example:
-      name: Velit debitis distinctio velit.
-      token: Iste odio explicabo quae accusantium id et.
-      userId: 8.09378452351465e+18
-    properties:
-      name:
-        description: Name of user
-        example: Velit debitis distinctio velit.
-        type: string
-      token:
-        description: Unique User Token
-        example: Iste odio explicabo quae accusantium id et.
-        type: string
-      userId:
-        description: Unique User ID
-        example: 8.09378452351465e+18
-        format: int64
-        type: integer
-    required:
-    - userId
-    - token
-    - name
-    title: 'Mediatype identifier: application/vnd.goa.example.account.register+json;
-      view=default'
-    type: object
+    type: array
   error:
     description: Error response media type (default view)
     example:
@@ -143,7 +130,7 @@ definitions:
 externalDocs:
   description: wiki
   url: https://github.com/tkc/goa-sandbox/wiki
-host: localhost:8080
+host: localhost:8081
 info:
   contact:
     email: iijima@onga.jp
@@ -156,22 +143,17 @@ info:
   title: goa-sandbox
   version: ""
 paths:
-  /currentuser:
+  /current_user:
     get:
       operationId: account#currentUser
-      parameters:
-      - in: query
-        name: token
-        required: false
-        type: string
       produces:
       - application/vnd.goa.error
-      - application/vnd.goa.example.account.currentuser+json
+      - application/vnd.goa.example.account+json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/GoaExampleAccountCurrentuser'
+            $ref: '#/definitions/GoaExampleAccount'
         "400":
           description: Bad Request
           schema:
@@ -197,12 +179,12 @@ paths:
         type: boolean
       produces:
       - application/vnd.goa.error
-      - application/vnd.goa.example.account.ok+json
+      - application/vnd.goa.example.account+json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/GoaExampleAccountOk'
+            $ref: '#/definitions/GoaExampleAccount'
         "401":
           description: Unauthorized
           schema:
@@ -215,18 +197,18 @@ paths:
       summary: secure jwt
       tags:
       - jwt
-  /jwt/signin:
+  /jwt/sign_in:
     post:
       description: Creates a valid JWT
-      operationId: jwt#signin
+      operationId: jwt#signIn
       produces:
       - application/vnd.goa.error
-      - application/vnd.goa.example.account.register+json
+      - application/vnd.goa.example.account+json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/GoaExampleAccountRegister'
+            $ref: '#/definitions/GoaExampleAccount'
         "204":
           description: No Content
           headers:
@@ -241,7 +223,7 @@ paths:
       - http
       security:
       - SigninBasicAuth: []
-      summary: signin jwt
+      summary: signIn jwt
       tags:
       - jwt
   /jwt/unsecure:
@@ -250,12 +232,12 @@ paths:
       operationId: jwt#unsecure
       produces:
       - application/vnd.goa.error
-      - application/vnd.goa.example.account.ok+json
+      - application/vnd.goa.example.account+json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/GoaExampleAccountOk'
+            $ref: '#/definitions/GoaExampleAccount'
         "401":
           description: Unauthorized
           schema:
@@ -265,26 +247,54 @@ paths:
       summary: unsecure jwt
       tags:
       - jwt
-  /login:
-    post:
-      operationId: account#login
+  /list:
+    get:
+      operationId: account#list
       parameters:
-      - in: query
-        name: email
+      - collectionFormat: multi
+        in: query
+        items:
+          type: integer
+        name: ids
         required: false
-        type: string
-      - in: query
-        name: passWord
-        required: false
-        type: string
+        type: array
+      - in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/AccountListPayload'
       produces:
       - application/vnd.goa.error
-      - application/vnd.goa.example.account.login+json
+      - application/vnd.goa.example.account+json; type=collection
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/GoaExampleAccountLogin'
+            $ref: '#/definitions/GoaExampleAccountCollection'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/error'
+      schemes:
+      - http
+      summary: list account
+      tags:
+      - account
+  /login:
+    post:
+      operationId: account#login
+      parameters:
+      - in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/AccountPayload'
+      produces:
+      - application/vnd.goa.error
+      - text/plain
+      responses:
+        "200":
+          description: OK
         "400":
           description: Bad Request
           schema:
@@ -292,59 +302,6 @@ paths:
       schemes:
       - http
       summary: login account
-      tags:
-      - account
-  /logout:
-    post:
-      operationId: account#logout
-      produces:
-      - application/vnd.goa.error
-      - application/vnd.goa.example.account.logout+json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/GoaExampleAccountLogout'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/error'
-      schemes:
-      - http
-      summary: logout account
-      tags:
-      - account
-  /register:
-    post:
-      operationId: account#register
-      parameters:
-      - in: query
-        name: email
-        required: false
-        type: string
-      - in: query
-        name: name
-        required: false
-        type: string
-      - in: query
-        name: passWord
-        required: false
-        type: string
-      produces:
-      - application/vnd.goa.error
-      - application/vnd.goa.example.account.register+json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/GoaExampleAccountRegister'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/error'
-      schemes:
-      - http
-      summary: register account
       tags:
       - account
 produces:
